# risk-predictor

./: .gitignore  Cargo.toml  formal-delivery-plan-2026-june-august.md  init.sh  main.py  phase-0-canonical-schema-contract.md  plan-investmentBankingRiskPricingPredictor.prompt.md  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
python/: server.py
python/risk_predictor/: __init__.py  market_data.py  report_generator.py  scenario_generator.py  schemas.py
rust_core/: Cargo.toml  pyproject.toml
src/: lib.rs  models.rs  monte_carlo.rs  pricing.rs  pytypes.rs
