[package]
name = "risk_predictor_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "risk_predictor_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
rand = "0.10.1"
rand_distr = "0.6.0"
rayon = "1.12.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
statrs = "0.18.0"